# HydroQC

./: .actrc  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: format.yml  lint.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
hydxc/: __init__.py  cli.py  config.py  io.py  plotting.py  report.py  rules.py
samples/: config.yaml  data.csv
scripts/: sampler.py
